# dev-scripts

./: README.md  dev-scripts.cabal
exe/: Main.hs
lib/Development/: Scripts.hs
lib/Development/Scripts/: Action.hs  Cabal.hs  Markdown.hs  Shake.hs  Stack.hs
src/: Main.hs
