name:                 dev-scripts
version:              0.1.0
synopsis:             Scripts for support of Haskell projects development
description:          Please see README.md
homepage:             https://github.com/tserduke/dev-scripts#readme
bug-reports:          https://github.com/tserduke/dev-scripts/issues
license:              BSD3
license-file:         LICENSE
author:               Taras Serduke
maintainer:           taras.serduke@gmail.com
copyright:            2016 Taras Serduke
category:             Development
stability:            experimental
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   README.md

source-repository head
  type:     git
  location: https://github.com/tserduke/dev-scripts


executable dev-scripts
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
  build-depends:      base < 5,
                      Cabal,
                      hlint,
                      shake,
                      yaml
  default-language:   Haskell2010
  default-extensions: DeriveAnyClass, DeriveGeneric
  ghc-options:        -Wall
