name:                   dev-scripts
version:                0.1.0
synopsis:               Scripts for support of Haskell projects development
description:            Please see README.md
homepage:               https://github.com/tserduke/dev-scripts#readme
bug-reports:            https://github.com/tserduke/dev-scripts/issues
license:                BSD3
license-file:           LICENSE
author:                 Taras Serduke
maintainer:             taras.serduke@gmail.com
copyright:              2016 Taras Serduke
category:               Development
stability:              experimental
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

source-repository head
    location:           https://github.com/tserduke/dev-scripts
    type:               git


library
    hs-source-dirs:     lib
    exposed-modules:    Development.Scripts
    other-modules:      Development.Scripts.Cabal
                        Development.Scripts.Markdown
                        Development.Scripts.Shake
                        Development.Scripts.Stack
    build-depends:      base < 5,
                        Cabal,
                        cheapskate,
                        containers,
                        data-default-class,
                        shake,
                        text,
                        time,
                        yaml
    -- need executable
    build-depends:      hlint
    default-language:   Haskell2010
    default-extensions: LambdaCase
    other-extensions:   DeriveAnyClass
                        DeriveGeneric
                        RecordWildCards
    ghc-options:        -Wall

executable dev
    hs-source-dirs:     exe
    main-is:            Main.hs
    build-depends:      base < 5,
                        dev-scripts,
                        shake
    default-language:   Haskell2010
    ghc-options:        -Wall
